# jellyAI3

./: .gitignore  DEPLOY-ithosaudio.md  README.md  cli.py  config.py  dataset.py  helpers.py  jelly  main.py  model.py  pyproject.toml  requirements-v2.txt  settings.py  train.py  train_sentencepiece.py
benchmark/: dialog.jsonl  etalon.jsonl  focus.jsonl  mnemos.jsonl  run_coverage.py  run_dialog.py  run_etalon.py  run_focus.py  run_mnemos.py  run_qgraph.py
data/: memory.jsonl  sub_topos_gazetteer.jsonl
dataprep/: clean.py  download.py  fetch_bible.py  wiki.py
docs/: ARCHITEKTURA.md  BACKLOG.md  HANDOVER.md  INSTALL.md  JAK-PSAT-FAKTA.md
examples/: 01_retrieval.py  02_fact_graph.py  03_corpus_tools.py  04_conversation.py  05_swap_a_block.py  06_web.py
infra/: README.md  jelly.conf  jelly.service
jellyai/: __init__.py  annotate.py  buildinfo.py  chunker.py  corpus.py  demo.py  errors.py  explain.py  facade.py  loader.py  logs.py  normalize.py  pipeline.py  ports.py  retriever.py  sentence_retriever.py  session.py  tasks.py  templates.py  text.py  ufal_client.py
model/: dataset.py  generate.py  gpt.py  tokenizer.py  train.py
qagen/: answers.py  build.py  download_models.py  quality.py  questions.py  tagger.py
services/: _common.py  iris_service.py  morpho_service.py  nametag_service.py  udpipe_service.py
tests/: test_activation.py  test_anaphora.py  test_annotate.py  test_answerer.py  test_attention.py  test_canon.py  test_chunker.py  test_clean.py  test_cli.py  test_cli_graph.py  test_cli_web.py  test_composer.py  test_config.py  test_config_json.py  (+87 more)
(+329 files in other folders)
