[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyai"
version = "0.1.0"
description = "Výuková knihovna pro české QA nad texty (retrieval + faktový graf)"
requires-python = ">=3.11"
dependencies = ["numpy"]

[tool.setuptools]
packages = ["jellyai", "jellyai.answerer", "jellyai.graph", "jellyai.lang"]
py-modules = ["config"]

[tool.setuptools.package-data]
"jellyai.lang" = ["*.json"]
